--- a/dev/blocks/dict/dict.scss
+++ b/dev/blocks/dict/dict.scss
@@ -142,6 +142,7 @@
             font-weight: 500;
             letter-spacing: 0.49px;
             color: black;
+            height: 100%;
             resize: none;
             transition: .3s ease all;
             border-radius: 5px;
