adding keyboard, bug fixes

--- a/dev/assets/scss/libs.scss
+++ b/dev/assets/scss/libs.scss
@@ -2,12 +2,17 @@
 
 @import "libs/owl.carousel.css";
 @import "libs/owl.theme.default.css";
+@import "libs/jquery.ml-keyboard.css";
+
 
 .owl-item{
     position: relative;
     
 }
 
+#mlkeyboard{
+    z-index: 99;
+}
 .owl-nav{
     position: absolute;
     top: 22px;
