--- a/dev/assets/scss/media.scss
+++ b/dev/assets/scss/media.scss
@@ -17,6 +17,7 @@
         margin-left: auto;
         margin-right: auto;
     }
+  
 }
 
 @media screen and (max-width: 1230px){
@@ -26,10 +27,13 @@
     .dict .block{
         max-width: 300px;
     }
+  
 }
 
 @media screen and (max-width: 1025px){
-    
+    .keyboard{
+        display: none;
+    }
     .dict .block{
         max-width: 100%;
     }
