--- a/dev/blocks/dict/dict.scss
+++ b/dev/blocks/dict/dict.scss
@@ -58,6 +58,7 @@
 
     &__transcript{
         margin-bottom: 26px;
+        padding-top: 20px;
         span{
             color: #b4b4b4;
             padding-left: 20px;
@@ -128,7 +129,6 @@
         background-color: #ffffff;
         display: flex;
         flex-direction: column;
-        margin-bottom: 20px;
         position: relative;
 
         &:hover{
@@ -189,6 +189,7 @@
             font-weight: 800;
             letter-spacing: 1.24px;
             transition: 0.5s all ease;
+            cursor: pointer;
         }
 
         &__bottom{
