--- a/dev/assets/scss/fonts.scss
+++ b/dev/assets/scss/fonts.scss
@@ -63,7 +63,24 @@ $SP: 'SF UI Text', sans-serif;
   }
   .icon-vk:before {
 	content: "\e90b";
-  }
+	}
+	
+.icon-down:before {
+  content: "\e90c";
+}
+.icon-close:before {
+  content: "\e90d";
+}
+.icon-marker:before {
+  content: "\e90e";
+}
+.icon-mail:before {
+  content: "\e90f";
+}
+.icon-phone:before {
+  content: "\e910";
+}
+
   
 @font-face {
 	font-family: 'SF UI Text';
