--- a/dev/blocks/dict/dict.scss
+++ b/dev/blocks/dict/dict.scss
@@ -147,7 +147,8 @@
             transition: .3s ease all;
             border-radius: 5px;
             border: none;
-
+            margin-bottom: 60px;
+            
             &:focus, &:active{
                 outline: none;
             }
@@ -347,7 +348,7 @@
     padding-top: 20px;
     flex-direction: column;
     align-items: center;
-    padding-bottom: 80px;
+    padding-bottom: 60px;
 
     &__body{
         display: flex;
