--- a/dev/assets/scss/main.scss
+++ b/dev/assets/scss/main.scss
@@ -7,7 +7,7 @@ html, body{
   padding: 0;
   height: 100%;
   min-height: 100%;
-  font-family: $SP;
+  font-family: $ED;
   box-sizing: border-box;
   position: relative;
   *{
