--- a/dev/assets/scss/media.scss
+++ b/dev/assets/scss/media.scss
@@ -17,6 +17,9 @@
         margin-left: auto;
         margin-right: auto;
     }
+    .contacts__map{
+        width: 60%;
+    }
   
 }
 
@@ -108,8 +111,85 @@
             }
         }
     }
+    #partners{
+        .modal{
+            &__block{
+                margin-left: 20px;
+                margin-right: 20px;
+            }
+        }
+    }
+
+    .contacts__wrapper{
+        flex-direction: column-reverse;
+    }
+    .contacts__side{
+        width: 100%;
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+    .contacts__info{
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+    .contacts__te{
+        margin-right: 50px;
+    }
+    .contacts__map{
+        width: 100%;
+        padding-left: 20px;
+        padding-right: 20px;
+        height: 500px;
+        *{
+            box-sizing: border-box;
+        }
+    }
+    
 }
 
+@media screen and (max-width: 750px){
+    .modal{
+        &__title{
+            font-size: 20px;
+            margin-top: 5px;
+        }
+        &__block{
+        height: 50%;
+        max-width: 100%;
+        margin-right: 20px;
+        margin-left: 20px;
+        padding: 30px 20px;
+    }
+
+        &__logo{
+            margin-top: 10px;
+        }
+        
+        &__text{
+            margin-top: 0;
+            font-size: 14px;
+        }
+        &__close{
+            top: 15px;
+            right: 15px;
+        }
+    }
+
+    #partners{
+        .modal{
+            &__block{
+                height: 90%;
+                overflow: auto;
+            }
+
+            &__row{
+                align-items: center;
+                justify-content: center;
+            }
+        }
+    }
+
+}
 @media screen and (max-width: 460px){
     .burger-menu{
         width: 100%;
@@ -124,6 +204,17 @@
     .dict__examples{
         margin-bottom: 30px;
     }
+    .contacts__te{
+        margin-right: 0;
+    }
+    .contacts__map{
+        height: 300px;
+    }
+    .modal{
+        &__block{
+        height: 60%;
+    }
+}
 }
 
 @media screen and (max-width: 360px){
@@ -131,4 +222,18 @@
        padding-left: 10px;
        padding-right: 10px;
    }
+   
+   
+}
+
+@media screen and (max-width: 320px){
+    .modal{
+        .modal{
+     
+            &__block{
+            height: 80%;
+        }
+    }
+    
+ }
 }
