--- a/dev/blocks/contacts/contacts.scss
+++ b/dev/blocks/contacts/contacts.scss
@@ -2,12 +2,13 @@
     &__wrapper{
         padding-top: 107px;
         display: flex;
+        padding-bottom: 130px;
 
     }
 
     &__map{
         width: 853px;
-        height: 710px;
+        height: 684px;
         margin-right: 53px;
     }
 
@@ -20,6 +21,10 @@
         align-items: flex-end;
         width: 100%;
         margin-bottom: 55px;
+    }
+    
+    .button{
+        margin-top: 28px;
     }
 
     .input-text{
@@ -35,9 +40,14 @@
         font-size: 16px;
         font-weight: 400;
 
+
         &:placeholder{
             color: #c7c7c7;
         }
+
+        &:focus, &:active{
+            border: 1px solid #2d9ae3;
+          }
     }
 
     .button{
@@ -50,5 +60,47 @@
         margin-bottom: 4px;
         font-weight: 400;
         width: 100%;
+    }
+
+    &__info{
+        display: flex;
+        flex-direction: column;
+    }
+
+    &__block{
+        display: flex;
+        align-items: center;
+        color: #505050;
+        font-size: 20px;
+        font-weight: 400;
+        position: relative;
+        margin-bottom: 44px;
+
+
+        p{
+            margin: 0;
+        }
+        i{
+            font-size: 44px;
+            color: #ff8d7b;
+            position: absolute;
+            top: calc(50% - 22px);
+            left: 0;
+
+        }
+        span{
+            margin-bottom: 10px;
+        }
+
+        a{
+            text-decoration: none;
+            color: #505050;
+        }
+    }
+
+    &__te{
+        display: flex;
+        padding-left: 80px;
+        flex-direction: column;
     }
 }
